--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon express_server.js",
+    "start": "./node_modules/.bin/nodemon -L express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +21,9 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.2",
+    "express": "^4.17.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
