--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/palmswill/tinyapp#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "cookie-session": "^2.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
-  },
-  "devDependencies": {
+    "express": "^4.17.2",
     "nodemon": "^2.0.15"
-  }
+  },
+  "devDependencies": {}
 }
