--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "body-parser": "^1.19.1",
     "cookie-session": "^2.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2",
-    "nodemon": "^2.0.15"
+    "express": "^4.17.2"
   },
   "devDependencies": {
     "chai": "^4.3.6",
-    "mocha": "^9.2.0"
+    "mocha": "^9.2.0",
+    "nodemon": "^2.0.15"
   }
 }
